@@ -1,5 +1,7 @@
 V5.6.4
 * Added test for Worldguard 6.2+ (MobHunting only support WG 6.2 and newer)
+* Fixed MobArena bug
+* Fixed ticket 408 (https://github.com/Rocologo/MobHunting/issues/408)
 V5.6.3
 * Added support for CMIHolograms
 * Fixed when when MythicMobs has been deleted from MythicMob config files. (https://github.com/Rocologo/MobHunting/issues/394)
